# anno-sql-test

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: main.yml
example/: demo_orders.sql
skills/writing-anno-sql-tests/: SKILL.md
src/anno_sql_test/: cli.py  discover.py  errors.py  keywords.py  log.py  models.py  reporter.py  runner.py
src/anno_sql_test/evaluators/: _field_parser.py  base.py  optimizer.py
src/anno_sql_test/evaluators/spark/: __init__.py  _base.py  _dual_join.py  _multi_agg.py  _single.py  _util.py  _utils.py  evaluator.py
src/anno_sql_test/parser/: __init__.py  _parser.py  _tokenizer.py  _utils.py  keywords.py
tests/: conftest.py  test_batches.py  test_discover.py  test_dual_assertions.py  test_integration.py  test_optimizer.py  test_parse_column_spec.py  test_parser.py  test_reporter.py  test_runner.py  test_single_assertions.py
